--- a/Maunga-club/style.css
+++ b/Maunga-club/style.css
@@ -2,6 +2,7 @@
     margin:0px;
     padding:0px;
     box-sizing: border-box;
+  
     }
     
     .header{
@@ -32,9 +33,10 @@
     }
     
     .club img{
-    display:100% 100%;
-    border: 3px dotted black;
-    align-items: center
+    display:flex;
+    align-items: center;
+    width:100%;
+    height:100%;
     }
     
     .mountain {
@@ -51,15 +53,12 @@
     font-size: 40px;
     padding-top:30px;
     padding-bottom:30px;
-    font-family:"papyrus",fantasy}
+    font-family:"papyrus",fantasy;
+    background-color: rgb(255, 255, 255);
+  }
     
     h2{
-    font-size:40px;
-    text-align: center;
-    color:white;
-    padding-bottom:100px}
-    
-    p1{
+      padding-top:100px;
     color:white;
     font-size:25px;
     text-align:center;
@@ -69,18 +68,28 @@
     
     .button{
     border-style:inset;
-    border-width:7px;
-    border-color:black;
-    font-size:50px;
-    color:black;
+    border-width:5px;
+    border-color:rgb(250, 178, 89);
+    font-size:20px;
+    color:rgb(250, 178, 89);
     align-items:center;
     justify-content:center;
     display:inline-block;
+    width:200px;
+    padding:10px 10px;
+    margin:auto;
+    text-align:center;
+
     }
     
     table {
       border: 1px solid black;
       align-items:center;
+      background-image: url('images/background.png');
+      background-size: 100% 100%;
+      margin:auto;
+      width:100%;
+      height:100%;
     }
     
     th,
@@ -92,8 +101,10 @@
     color:black}
     
     caption{
-    font-size: 60px;
-    font-family: "Lucida Console", "Courier New", monospace;}
+        padding-top:30px;
+        font-size: 50px;
+        font-family: "Lucida Console", "Courier New", monospace;}
+        
 
     .footer hr{
         margin:2rem 0;
