--- a/Maunga-club/style.css
+++ b/Maunga-club/style.css
@@ -10,6 +10,7 @@
       justify-content: space-between;
       align-items: center;
       background-color: rgb(30,190,230);
+
     }
     
     li{
@@ -49,22 +50,23 @@
     }
     
     h1{
+      margin-bottom:100px;
     text-align:center;
     font-size: 40px;
-    padding-top:30px;
-    padding-bottom:30px;
+    padding-top:20px;
+    padding-bottom:20px;
     font-family:"papyrus",fantasy;
     background-color: rgb(255, 255, 255);
   }
     
     h2{
-      padding-top:100px;
-    color:white;
-    font-size:25px;
-    text-align:center;
-    padding:auto;
-    padding-bottom:100px
-    }
+      margin-top:200px;
+      font-size:20px;
+      text-align: center;
+      color:black;
+      background-color: rgb(255, 255, 255);
+    margin-bottom:100px;}
+
     
     .button{
     border-style:inset;
