--- a/Maunga-club/style.css
+++ b/Maunga-club/style.css
@@ -67,23 +67,7 @@
       background-color: rgb(255, 255, 255);
     margin-bottom:100px;}
 
-    
-    .button{
-    border-style:inset;
-    border-width:5px;
-    border-color:rgb(250, 178, 89);
-    font-size:20px;
-    color:rgb(250, 178, 89);
-    align-items:center;
-    justify-content:center;
-    display:inline-block;
-    width:200px;
-    padding:10px 10px;
-    margin:auto;
-    text-align:center;
-
-    }
-    
+ 
     table {
       border: 1px solid black;
       align-items:center;
@@ -92,11 +76,14 @@
       margin:auto;
       width:100%;
       height:100%;
+      height:500px
     }
     
     th,
     td {
       border: 1px solid black;
+      font-size:20px;
+
     }
     
     td li{
@@ -109,6 +96,59 @@
         
 
     .footer hr{
-        margin:2rem 0;
-        text-align:center;
+        margin:auto;
+        justify-content:center
       }
+
+    .im {
+      padding-top:250px;
+      padding-bottom:250px;
+      background-image: url('images/maunga_club_cabin.jpg');
+      background-size:100% 100%;
+      margin:auto;
+
+    }
+
+    .im h3 {
+      padding-top:20px;
+      padding-bottom:20px;
+      background-color: black;
+      color:white;
+      font-size:30px;
+      font-family:"papyrus",fantasy;
+      margin-bottom:20px;
+      text-align:center
+    }
+     
+    .button{
+      margin-top:20px;
+      border-style:inset;
+      border-width:5px;
+      border-color:rgb(0, 0, 0);
+      font-size:20px;
+      color:rgb(255, 255, 255);
+      width:200px;
+      padding:10px 10px;
+      text-align:center;
+      background-color: black;
+      justify-content:center;
+      display:inline-block;
+      align-items:center;
+      }
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
