--- a/Maunga-club/style.css
+++ b/Maunga-club/style.css
@@ -18,12 +18,12 @@
       display:flex
     }
 
-    .header li a{
+    .header a{
     text-decoration: none;
-    display: inline-block;
+    display:inline-block;
     font-size:20px;
     padding-right:10px;
-    color: black}
+    color: black;}
     
     .club{
     border: 5px dotted white;
@@ -44,7 +44,6 @@
     .mountain {
     background-image:url('images/mountain_view_1.jpg');
     background-size:100% 100%;
-    length:100%;
     width:100%;
     padding-top:100px;
     padding-bottom:100px
@@ -85,6 +84,7 @@
     td {
       border: 1px solid black;
       font-size:20px;
+      text-decoration: none;
 
     }
     
@@ -229,7 +229,7 @@ button {
 @media (min-width: 700px) {
   .wrapper {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 0.5fr 2fr;
   }
   .wrapper > * {
     padding: 2em 2em;
@@ -307,7 +307,6 @@ p{
   gap: 5em;
   margin-top: 2em;
   justify-content: center;
-  padding:auto;
   margin:auto
 }
 
@@ -359,37 +358,3 @@ body{
   text-align:center
 }
 
-
-.popup{
-  width:400px;
-  background:#fff;
-  border-radius:6px;
-  position:absolute;
-  top:0;
-  left:50%;
-  transform:translate(-50%, -50%) scale(0.1);
-  text-align:center;
-  padding:0 30px 30px;
-  color:#333;
-  transition:transform 0.4s, top 0.4s;
-  visibility:hidden;
-}
-
-.open-popup{
-  visibility: visible;
-  top:50%;
-  transform:translate(-50%, -50%) scale(1);
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
-}
